add vm functions

--- a/memory/src/CMakeLists.txt
+++ b/memory/src/CMakeLists.txt
@@ -5,10 +5,20 @@ set(HEADERFILES
     stack.h
     pool.h
     freelist.h
+    vm.h
 )
 
 set(SRCS
     freelist.c
+)
+
+set(SPECIFIC_SRCS
+    vm.c
+)
+
+set(SUBDIRS
+    win32
+    nix
 )
 
 set(INCLUDE_BASE "${PROJECT_SOURCE_DIR}/memory/include/snmemory")
@@ -16,3 +26,10 @@ set(INCLUDE_BASE "${PROJECT_SOURCE_DIR}/memory/include/snmemory")
 list(TRANSFORM HEADERFILES PREPEND "${INCLUDE_BASE}/")
 
 target_sources(snmemory PRIVATE ${HEADERFILES} ${SRCS})
+
+foreach(dir IN LISTS SUBDIRS)
+    foreach(src IN LISTS SPECIFIC_SRCS)
+        target_sources(snmemory PRIVATE "${dir}/${src}")
+    endforeach()
+endforeach()
+
